# video_viewer_mcp

./: Containerfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: build-and-publish.yml  test.yml
src/video_viewer_mcp/: __init__.py  __main__.py  api.py  app.py  models.py  server.py
src/video_viewer_mcp/config/: __init__.py  downloaders.py  settings.py
src/video_viewer_mcp/core/: __init__.py  cleanup.py  danmaku.py  download.py  metadata.py  scheduler.py  screenshot.py  subtitles.py  tokens.py
tests/: __init__.py  conftest.py  test_cleanup.py  test_config.py  test_integration.py  test_metadata.py  test_scheduler.py  test_screenshot.py
tests/data/youtube/jNQXAC9IVRw/: info.json  metadata.json
